--- a/MyFirstApp/src/main/AndroidManifest.xml
+++ b/MyFirstApp/src/main/AndroidManifest.xml
@@ -24,11 +24,12 @@
         </activity>
         <activity
                 android:name="com.example.myfirstapp.DisplayMessageActivity"
-                android:label="@string/title_activity_display_message"/>
-                android:parentActivityName="com.example.myfirstapp.MainActivity">
+                android:label="@string/title_activity_display_message"
+                android:parentActivityName="com.example.myfirstapp.MainActivity"/>
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value="com.example.myfirstapp.MainActivity"/>
+
     </application>
 
 </manifest>
